fixed letter-spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,6 +30,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  letter-spacing: 0.18px;
 }
 
 .header__list-item {
@@ -38,14 +39,11 @@
 
 .header__list-item:first-of-type {
   list-style-type: none;
+  letter-spacing: normal;
 }
 
 .header__link_active .header__link-list-item {
   text-decoration: none;
-}
-
-.header__list-item:nth-child(n+2):nth-child(-n+3) {
-  letter-spacing: 0.18px;
 }
 
 .header__logo {
